--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -2,7 +2,9 @@ name: Unit Test
 
 on:
   pull_request:
-    branches: [ main, develop]
+    branches: [ main, develop ]
+  push:
+    branches: [ main, develop ]
 
 jobs:
   test:
