--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ navigationCompose = "2.8.7"
 koin-bom = "4.1.0-Beta5"
 koin-annotation = "2.0.0-RC1"
 ksp = "2.1.10-1.0.30"
+materialIcons = "1.7.8"
 
 
 [libraries]
@@ -38,7 +39,7 @@ arrow-core = { module = "io.arrow-kt:arrow-core", version.ref = "arrow" }
 arrow-fx-coroutines = { module = "io.arrow-kt:arrow-fx-coroutines", version.ref = "arrow" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "composeBom" }
+material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIcons" }
 koin-bom = { module = "io.insert-koin:koin-bom", version.ref = "koin-bom" }
 koin-core = { module = "io.insert-koin:koin-core" }
 koin-andriod = { module = "io.insert-koin:koin-android" }
