--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -18,3 +18,6 @@ jobs:
 
       - name: Unit Test
         run: ./gradlew testDebugUnitTest
+
+      - name: Build Test
+        run: ./gradlew assembleDebug
